vlc-java/src/main/java/com/tek/vlc/bridj/LibvlcLibrary.java

    /**
     * Get current video subtitle.<br>
     * \param p_mi the media player<br>
     * \return the video subtitle selected, or -1 if none<br>
     * Original signature : <code>int libvlc_video_get_spu(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2568</i>
     */
    public static native int libvlc_video_get_spu(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get the number of available video subtitles.<br>
     * \param p_mi the media player<br>
     * \return the number of available video subtitles<br>
     * Original signature : <code>int libvlc_video_get_spu_count(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2576</i>
     */
    public static native int libvlc_video_get_spu_count(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get the description of available video subtitles.<br>
     * \param p_mi the media player<br>
     * \return list containing description of available video subtitles.<br>
     * It must be freed with libvlc_track_description_list_release()<br>
     * Original signature : <code>libvlc_track_description_t* libvlc_video_get_spu_description(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2585</i>
     */
    public static native Pointer<libvlc_track_description_t > libvlc_video_get_spu_description(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set new video subtitle.<br>
     * \param p_mi the media player<br>
     * \param i_spu video subtitle track to select (i_id from track description)<br>
     * \return 0 on success, -1 if out of range<br>
     * Original signature : <code>int libvlc_video_set_spu(libvlc_media_player_t*, int)</code><br>
     * <i>native declaration : line 2595</i>
     */
    public static native int libvlc_video_set_spu(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int i_spu);
    /**
     * Set new video subtitle file.<br>
     * \param p_mi the media player<br>
     * \param psz_subtitle new video subtitle file<br>
     * \return the success status (boolean)<br>
     * Original signature : <code>int libvlc_video_set_subtitle_file(libvlc_media_player_t*, const char*)</code><br>
     * <i>native declaration : line 2604</i>
     */
    public static native int libvlc_video_set_subtitle_file(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, Pointer<Byte > psz_subtitle);
    /**
     * Get the current subtitle delay. Positive values means subtitles are being<br>
     * displayed later, negative values earlier.<br>
     * \param p_mi media player<br>
     * \return time (in microseconds) the display of subtitles is being delayed<br>
     * \version LibVLC 2.0.0 or later<br>
     * Original signature : <code>int64_t libvlc_video_get_spu_delay(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2614</i>
     */
    public static native long libvlc_video_get_spu_delay(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set the subtitle delay. This affects the timing of when the subtitle will<br>
     * be displayed. Positive values result in subtitles being displayed later,<br>
     * while negative values will result in subtitles being displayed earlier.<br>
     * The subtitle delay will be reset to zero each time the media changes.<br>
     * \param p_mi media player<br>
     * \param i_delay time (in microseconds) the display of subtitles should be delayed<br>
     * \return 0 on success, -1 on error<br>
     * \version LibVLC 2.0.0 or later<br>
     * Original signature : <code>int libvlc_video_set_spu_delay(libvlc_media_player_t*, int64_t)</code><br>
     * <i>native declaration : line 2628</i>
     */
    public static native int libvlc_video_set_spu_delay(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, long i_delay);
    /**
     * Get the description of available titles.<br>
     * \param p_mi the media player<br>
     * \return list containing description of available titles.<br>
     * It must be freed with libvlc_track_description_list_release()<br>
     * Original signature : <code>libvlc_track_description_t* libvlc_video_get_title_description(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2637</i>
     */
    public static native Pointer<libvlc_track_description_t > libvlc_video_get_title_description(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get the description of available chapters for specific title.<br>
     * \param p_mi the media player<br>
     * \param i_title selected title<br>
     * \return list containing description of available chapter for title i_title.<br>
     * It must be freed with libvlc_track_description_list_release()<br>
     * Original signature : <code>libvlc_track_description_t* libvlc_video_get_chapter_description(libvlc_media_player_t*, int)</code><br>
     * <i>native declaration : line 2648</i>
     */
    public static native Pointer<libvlc_track_description_t > libvlc_video_get_chapter_description(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int i_title);
    /**
     * Get current crop filter geometry.<br>
     * \param p_mi the media player<br>
     * \return the crop filter geometry or NULL if unset<br>
     * Original signature : <code>char* libvlc_video_get_crop_geometry(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2657</i>
     */
    public static native Pointer<Byte > libvlc_video_get_crop_geometry(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set new crop filter geometry.<br>
     * \param p_mi the media player<br>
     * \param psz_geometry new crop filter geometry (NULL to unset)<br>
     * Original signature : <code>void libvlc_video_set_crop_geometry(libvlc_media_player_t*, const char*)</code><br>
     * <i>native declaration : line 2666</i>
     */
    public static native void libvlc_video_set_crop_geometry(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, Pointer<Byte > psz_geometry);
    /**
     * Get current teletext page requested.<br>
     * \param p_mi the media player<br>
     * \return the current teletext page requested.<br>
     * Original signature : <code>int libvlc_video_get_teletext(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2674</i>
     */
    public static native int libvlc_video_get_teletext(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set new teletext page to retrieve.<br>
     * \param p_mi the media player<br>
     * \param i_page teletex page number requested<br>
     * Original signature : <code>void libvlc_video_set_teletext(libvlc_media_player_t*, int)</code><br>
     * <i>native declaration : line 2682</i>
     */
    public static native void libvlc_video_set_teletext(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int i_page);
    /**
     * Toggle teletext transparent status on video output.<br>
     * \param p_mi the media player<br>
     * Original signature : <code>void libvlc_toggle_teletext(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2689</i>
     */
    public static native void libvlc_toggle_teletext(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get number of available video tracks.<br>
     * \param p_mi media player<br>
     * \return the number of available video tracks (int)<br>
     * Original signature : <code>int libvlc_video_get_track_count(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2697</i>
     */
    public static native int libvlc_video_get_track_count(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get the description of available video tracks.<br>
     * \param p_mi media player<br>
     * \return list with description of available video tracks, or NULL on error.<br>
     * It must be freed with libvlc_track_description_list_release()<br>
     * Original signature : <code>libvlc_track_description_t* libvlc_video_get_track_description(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2706</i>
     */
    public static native Pointer<libvlc_track_description_t > libvlc_video_get_track_description(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Get current video track.<br>
     * \param p_mi media player<br>
     * \return the video track ID (int) or -1 if no active input<br>
     * Original signature : <code>int libvlc_video_get_track(libvlc_media_player_t*)</code><br>
     * <i>native declaration : line 2715</i>
     */
    public static native int libvlc_video_get_track(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi);
    /**
     * Set video track.<br>
     * \param p_mi media player<br>
     * \param i_track the track ID (i_id field from track description)<br>
     * \return 0 on success, -1 if out of range<br>
     * Original signature : <code>int libvlc_video_set_track(libvlc_media_player_t*, int)</code><br>
     * <i>native declaration : line 2725</i>
     */
    public static native int libvlc_video_set_track(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int i_track);
    /**
     * Take a snapshot of the current video window.<br>
     * If i_width AND i_height is 0, original size is used.<br>
     * If i_width XOR i_height is 0, original aspect-ratio is preserved.<br>
     * \param p_mi media player instance<br>
     * \param num number of video output (typically 0 for the first/only one)<br>
     * \param psz_filepath the path where to save the screenshot to<br>
     * \param i_width the snapshot's width<br>
     * \param i_height the snapshot's height<br>
     * \return 0 on success, -1 if the video was not found<br>
     * Original signature : <code>int libvlc_video_take_snapshot(libvlc_media_player_t*, unsigned, const char*, unsigned int, unsigned int)</code><br>
     * <i>native declaration : line 2741</i>
     */
    public static native int libvlc_video_take_snapshot(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int num, Pointer<Byte > psz_filepath, int i_width, int i_height);
    /**
     * Enable or disable deinterlace filter<br>
     * \param p_mi libvlc media player<br>
     * \param psz_mode type of deinterlace filter, NULL to disable<br>
     * Original signature : <code>void libvlc_video_set_deinterlace(libvlc_media_player_t*, const char*)</code><br>
     * <i>native declaration : line 2751</i>
     */
    public static native void libvlc_video_set_deinterlace(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, Pointer<Byte > psz_mode);
    /**
     * Get an integer marquee option value<br>
     * \param p_mi libvlc media player<br>
     * \param option marq option to get \see libvlc_video_marquee_int_option_t<br>
     * Original signature : <code>int libvlc_video_get_marquee_int(libvlc_media_player_t*, unsigned)</code><br>
     * <i>native declaration : line 2760</i>
     */
    public static native int libvlc_video_get_marquee_int(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int option);
    /**
     * Get a string marquee option value<br>
     * \param p_mi libvlc media player<br>
     * \param option marq option to get \see libvlc_video_marquee_string_option_t<br>
     * Original signature : <code>char* libvlc_video_get_marquee_string(libvlc_media_player_t*, unsigned)</code><br>
     * <i>native declaration : line 2769</i>
     */
    public static native Pointer<Byte > libvlc_video_get_marquee_string(Pointer<LibvlcLibrary.libvlc_media_player_t > p_mi, int option);
